<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        tools:context=".Activity2">

    <TableRow
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textSize="22sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nom"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom1" />
        </com.google.android.material.textfield.TextInputLayout>

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/prenom"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prenom1" />
        </com.google.android.material.textfield.TextInputLayout>
    </TableRow>
<TableRow
    android:gravity="center">

    <Button
        android:id="@+id/button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:textSize="20sp" />
</TableRow>
    <TableRow
        android:gravity="center">

        <TextView
            android:id="@+id/affichage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonjour"
            android:textSize="20sp" />
    </TableRow>
</TableLayout>

